# fn_tutorial

./: memo.txt  pyproject.toml
pythonfn/: func.py  func.yaml  requirements.txt
test_pythonfn/: test_func.py
trial/: test_data.xml  trial.py
